# lyapunov

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
examples/: duffing.py  lorentz.py
lyapunov/: __init__.py  lyapunov.py
