[metadata]
name = lyapunov
version = 0.1.1
author = Gerben Beintema
author_email = g.i.beintema@tue.nl
description = An easy going maximum lyapunov exponent computer for continuous systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GerbenBeintema/lyapunov
project_urls =
    Bug Tracker = https://github.com/GerbenBeintema/lyapunov/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    scipy
    numpy
    matplotlib

[options.packages.find]
exclude = examples